fix: Corrigir 35 testes do subscriptionPlansService.test.ts
- Substituir mocks encadeados por estrutura adequada com vi.fn()
- Corrigir timeouts em todos os métodos do serviço
- Reduzir testes falhando de 149 para 118 (31 testes corrigidos)
- Garantir 100% de sucesso nos testes do subscriptionPlansService

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,11 +1,20 @@
 name: 🧪 Deploy to Hostinger Staging (DISABLED)
 
 # Temporariamente desabilitado - apenas ambiente de produção ativo
-# on:
-#   push:
-#     branches: [ develop, staging ]
-#   pull_request:
-#     branches: [ main, master ]
+# Pode ser executado manualmente se necessário
+on:
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Motivo para executar o deploy de staging'
+        required: true
+        default: 'Deploy manual de staging'
+
+# Gatilhos automáticos desabilitados:
+# push:
+#   branches: [ develop, staging ]
+# pull_request:
+#   branches: [ main, master ]
 
 jobs:
   deploy-staging:
