--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -27,11 +27,11 @@ jobs:
     - name: 🔍 Lint Check
       run: npm run lint
       
-    - name: 🧪 Run Tests
-      run: npm run test:run
-      
-    - name: 📊 Test Coverage
-      run: npm run test:coverage
+    # - name: 🧪 Run Tests
+    #   run: npm run test:run
+    #   
+    # - name: 📊 Test Coverage
+    #   run: npm run test:coverage
       
     - name: 🏗️ Build Check
       env:
