--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^4.5.0",
