--- a/env.example
+++ b/env.example
@@ -81,6 +81,9 @@ VITE_AWS_S3_BUCKET=seu-bucket-name
 # Google Analytics 4
 VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 
+# Google Tag Manager
+VITE_GTM_ID=GTM-K2SDXNLP
+
 # Mixpanel (alternativa)
 VITE_MIXPANEL_TOKEN=sua-token-mixpanel
 
